# gpt-2-rope

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dpo.yaml  finetune_lora.yaml  tiny.yaml
configs/ablations/: tiny_learned_pe.yaml  tiny_mha.yaml  tiny_mqa.yaml  tiny_postnorm.yaml
configs/sweeps/: lr.yaml
docs/: architecture.md
docs/tutorials/: 00-course-map-and-engineering-workflow.md  01-reproducible-python-and-ci-toolchain.md  02-configuration-as-an-experiment-contract.md  03-byte-level-bpe-from-files-to-training.md  04-pretraining-data-pipelines-and-memmap.md  05-supervised-data-and-loss-masking.md  06-model-contracts-initialization-and-weight-tying.md  07-rotary-position-embeddings-in-pytorch.md  08-grouped-query-attention-and-sdpa.md  09-kv-cache-and-autoregressive-generation.md  10-optimizer-schedules-and-mixed-precision.md  11-building-a-correct-pretraining-loop.md  12-distributed-data-parallel-training.md  13-exact-resume-checkpoint-engineering.md  14-observability-evaluation-and-profiling.md  15-lora-and-supervised-fine-tuning.md  README.md  (+10 more)
examples/: dpo_sample.jsonl  sft_sample.jsonl
katas/: README.md
scripts/: make_kata.py
tests/: test_accelerators.py  test_benchmarking.py  test_checkpoint.py  test_cli.py  test_config.py  test_config_io.py  test_data.py  test_data_quality.py  test_distributed.py  test_dpo.py  test_evaluation.py  test_lora_generation.py  test_model.py  test_monitoring.py  test_quantization.py  test_serving.py  test_sweeps.py  test_tokenizer.py  test_training.py
(+59 files in other folders)
